# pick-potus

./: Cargo.toml  Electoral_College.csv  README.md
